Updated anchor tag and background colour.

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     <hr>
     <br>
     <h3>How to get the big dogs to notice you</h3>
-    <img src="C:\Users\USER\Desktop\Web Development\HTML-Personal site\Professional relationship.png" alt="Professional relationship" height="600" width="1200">
+    <img src="HTML-Personal site\images\Professional relationship.png" alt="Professional relationship" height="600" width="1200">
     <br>
       <a href="Contact me.html">Contact page</a>
-      
+
   </body>
 </html>
