--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <hr>
     <br>
     <h3>How to get the big dogs to notice you</h3>
-    <img src="HTML-Personal site\images\Professional relationship.png" alt="Professional relationship">
+    <img src="Sam-Muaks/images/Professional relationship.png" alt="Professional relationship">
     <br>
       <a href="Contact me.html">Contact page</a>
 
