--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     <hr>
     <br>
     <h3>How to get the big dogs to notice you</h3>
-    <img src="/images/Professional relationship.png" alt="Professional relationship">
     <br>
+   <img src="images\Professional relationship.png\Professional relationship.png" alt="Professional relationship" width="100%">
       <a href="Contact me.html">Contact page</a>
 
   </body>
