--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <br>
     <h3>How to get the big dogs to notice you</h3>
     <br>
-   <img src="https://sam-muaks.github.io/Sam-Muaks/images/Professional relationship.png" alt="Professional relationship" width="100%">
+   <img src="Sam-Muaks/images/Professional relationship.png" alt="Professional relationship" width="100%">
       <a href="Contact me.html">Contact page</a>
 
   </body>
